# pkg/api/ova-task-api/ova-task-api.pb.go
@@ -10,6 +10,7 @@ import (
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
 	reflect "reflect"
 	sync "sync"
 )
@@ -76,20 +77,27 @@ var file_api_ova_task_api_ova_task_api_proto_rawDesc = []byte{
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0c, 0x6f, 0x76, 0x61, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e,
 	0x61, 0x70, 0x69, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f,
 	0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x22, 0x25, 0x0a, 0x0d, 0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61,
-	0x67, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x32, 0x6c, 0x0a, 0x0b, 0x59, 0x6f, 0x75, 0x72,
-	0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x5d, 0x0a, 0x04, 0x45, 0x63, 0x68, 0x6f, 0x12,
-	0x1b, 0x2e, 0x6f, 0x76, 0x61, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x53,
-	0x74, 0x72, 0x69, 0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x1a, 0x1b, 0x2e, 0x6f,
-	0x76, 0x61, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x53, 0x74, 0x72, 0x69,
-	0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x15, 0x22, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x65, 0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2f, 0x65,
-	0x63, 0x68, 0x6f, 0x3a, 0x01, 0x2a, 0x42, 0x33, 0x5a, 0x31, 0x6f, 0x7a, 0x6f, 0x6e, 0x76, 0x61,
-	0x2f, 0x6f, 0x76, 0x61, 0x2d, 0x74, 0x61, 0x73, 0x6b, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x6b,
-	0x67, 0x2f, 0x6f, 0x76, 0x61, 0x2d, 0x74, 0x61, 0x73, 0x6b, 0x2d, 0x61, 0x70, 0x69, 0x3b, 0x6f,
-	0x76, 0x61, 0x5f, 0x74, 0x61, 0x73, 0x6b, 0x5f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x33,
+	0x6f, 0x1a, 0x1b, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62,
+	0x75, 0x66, 0x2f, 0x65, 0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x25,
+	0x0a, 0x0d, 0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12,
+	0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05,
+	0x76, 0x61, 0x6c, 0x75, 0x65, 0x32, 0xc2, 0x01, 0x0a, 0x0a, 0x4f, 0x76, 0x61, 0x54, 0x61, 0x73,
+	0x6b, 0x41, 0x70, 0x69, 0x12, 0x55, 0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x16, 0x2e, 0x67,
+	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1b, 0x2e, 0x6f, 0x76, 0x61, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e,
+	0x61, 0x70, 0x69, 0x2e, 0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67,
+	0x65, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x12, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x65,
+	0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x12, 0x5d, 0x0a, 0x04, 0x45,
+	0x63, 0x68, 0x6f, 0x12, 0x1b, 0x2e, 0x6f, 0x76, 0x61, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65,
+	0x1a, 0x1b, 0x2e, 0x6f, 0x76, 0x61, 0x2e, 0x74, 0x61, 0x73, 0x6b, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x4d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x22, 0x1b, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x15, 0x22, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x65, 0x78, 0x61, 0x6d, 0x70,
+	0x6c, 0x65, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x3a, 0x01, 0x2a, 0x42, 0x33, 0x5a, 0x31, 0x6f, 0x7a,
+	0x6f, 0x6e, 0x76, 0x61, 0x2f, 0x6f, 0x76, 0x61, 0x2d, 0x74, 0x61, 0x73, 0x6b, 0x2d, 0x61, 0x70,
+	0x69, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x6f, 0x76, 0x61, 0x2d, 0x74, 0x61, 0x73, 0x6b, 0x2d, 0x61,
+	0x70, 0x69, 0x3b, 0x6f, 0x76, 0x61, 0x5f, 0x74, 0x61, 0x73, 0x6b, 0x5f, 0x61, 0x70, 0x69, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -107,12 +115,15 @@ func file_api_ova_task_api_ova_task_api_proto_rawDescGZIP() []byte {
 var file_api_ova_task_api_ova_task_api_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
 var file_api_ova_task_api_ova_task_api_proto_goTypes = []interface{}{
 	(*StringMessage)(nil), // 0: ova.task.api.StringMessage
+	(*emptypb.Empty)(nil), // 1: google.protobuf.Empty
 }
 var file_api_ova_task_api_ova_task_api_proto_depIdxs = []int32{
-	0, // 0: ova.task.api.YourService.Echo:input_type -> ova.task.api.StringMessage
-	0, // 1: ova.task.api.YourService.Echo:output_type -> ova.task.api.StringMessage
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	1, // 0: ova.task.api.OvaTaskApi.Ping:input_type -> google.protobuf.Empty
+	0, // 1: ova.task.api.OvaTaskApi.Echo:input_type -> ova.task.api.StringMessage
+	0, // 2: ova.task.api.OvaTaskApi.Ping:output_type -> ova.task.api.StringMessage
+	0, // 3: ova.task.api.OvaTaskApi.Echo:output_type -> ova.task.api.StringMessage
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
